--- a/StudentManagementSystem/src/main/resources/application.properties
+++ b/StudentManagementSystem/src/main/resources/application.properties
@@ -19,7 +19,7 @@
 #server.error.include-stacktrace=never
 
 
-
+server.port=9090
 spring.datasource.url = jdbc:mysql://localhost:3306/smsdb
 spring.datasource.username = root
 spring.datasource.password = tiger
