--- a/StudentManagementSystem/src/main/resources/application.properties
+++ b/StudentManagementSystem/src/main/resources/application.properties
@@ -23,7 +23,7 @@ server.port=9090
 spring.datasource.url = jdbc:mysql://localhost:3306/smsdb
 spring.datasource.username = root
 spring.datasource.password = tiger
-spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
